--- a/index.html
+++ b/index.html
@@ -93,6 +93,32 @@
     </section>
 
 
+    <section>
+        <div class="idea">
+            <div class="pic_idea">
+                <img src="images/rsz_1rsz_idea.jpeg" alt="">
+            </div>
+            <div class="check">
+                <h2>Open for ideas</h2>
+                <form action="/action_page.php">
+                    <input type="checkbox" id="idea1" name="idea1" value="one">
+                    <label for="idea1"> Try Web Development with Programming Hero</label><br>
+                    <input type="checkbox" id="idea2" name="idea2" value="two">
+                    <label for="idea2"> Try Introduction to Programming with Phitron</label><br>
+                    <input type="checkbox" id="idea3" name="idea3" value="three">
+                    <label for="idea3"> Both</label><br><br>
+                    <input type="submit" value="Submit">
+                  </form>
+
+                
+
+
+            </div>
+
+        </div>
+    </section>
+
+
 
     <section class="contact">
         <div class="con_one">
