--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="start">
             <div class="try">
-                <img src="images/banner/banner1.png" alt="">
+                <img src="./images/banner/banner1.png" alt="">
                 <p class="one">All things are new In this World</p>
                 <p class="two">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                 <button class="btn">Contact Us</button>
@@ -25,7 +25,7 @@
         <section class="second">
             <div class="div_s">
                 <div>
-                    <img src="images/person.png" alt="">
+                    <img src="./images/person.png" alt="">
                 </div>
                 
                 <div>
@@ -51,22 +51,22 @@
 
             <div class="skills">
                 <div class="skill">
-                    <img  src="images/icons/web.png" alt="">
+                    <img  src="./images/icons/web.png" alt="">
                     <p class="skill-title">Web Dev</p>
                     <p class="skill-dis">I want to start</p>
                 </div>
                 <div class="skill">
-                    <img src="images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <p class="skill-title">Javascript</p>
                     <p class="skill-dis">I want to learn</p>
                 </div>
                 <div class="skill">
-                    <img src="images/icons/smoke.png" alt="">
+                    <img src="./images/icons/smoke.png" alt="">
                     <p class="skill-title">Smoking Habit</p>
                     <p class="skill-dis">I want to end</p>
                 </div>
                 <div class="skill">
-                    <img src="images/icons/ecom.png" alt="">
+                    <img src="./images/icons/ecom.png" alt="">
                     <p class="skill-title">ecommerce</p>
                     <p class="skill-dis">I want to Develop</p>  
                 </div>
@@ -81,7 +81,7 @@
 
 
         <div class="container">
-            <img src="images/watch.png" alt="">
+            <img src="./images/watch.png" alt="">
         
             <div class="text-block">
                 <p class="con">Awlays keep a positive mindset</p>
@@ -96,7 +96,7 @@
     <section>
         <div class="idea">
             <div class="pic_idea">
-                <img src="images/rsz_1rsz_idea.jpeg" alt="">
+                <img src="./images/rsz_1rsz_idea.jpeg" alt="">
             </div>
             <div class="check">
                 <h2>Open for ideas</h2>
@@ -127,13 +127,13 @@
             <p class="h2">email: xyz@gmail.com</p>
             <p class="h2">phone: +88017********</p>
             <a href="">
-            <img src="images/icons/fb.png" alt="">
+            <img src="./images/icons/fb.png" alt="">
             </a>
             <a href="">
-                <img src="images/icons/twitter.png" alt="">
+                <img src="./images/icons/twitter.png" alt="">
             </a>
             <a href="">
-                <img src="images/icons/youtube.png" alt="">
+                <img src="./images/icons/youtube.png" alt="">
                 </a>
 
         </div>
